--- a/Demo.Languages2/Demo.Languages2.ReactJS/packages.config
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/packages.config
@@ -15,6 +15,7 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Modernizr" version="2.6.2" targetFramework="net452" />
+  <package id="Moment.js" version="2.11.1" targetFramework="net452" />
   <package id="MsieJavaScriptEngine" version="1.5.1" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="React.Core" version="2.1.2" targetFramework="net452" />
