--- a/Demo.Languages2/Demo.Languages2.ReactJS/Demo.Languages2.ReactJS.csproj
+++ b/Demo.Languages2/Demo.Languages2.ReactJS/Demo.Languages2.ReactJS.csproj
@@ -210,6 +210,7 @@
     <Content Include="Views\Home\Game.cshtml" />
     <Content Include="Scripts\jsx\hello-react.jsx" />
     <Content Include="Scripts\jsx\stateless-test.jsx" />
+    <Content Include="Views\Home\StateLess.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
